# Gall

./: .gitignore  CMakeLists.txt
Include/Amoxe/: Amoxe.hpp  Compressable.hpp  Decompressable.hpp  Image.hpp  Layer.hpp  Tile.hpp
Include/Amoxe/Exception/: Exception.hpp  GenericException.hpp
Include/Gall/: Gall.hpp
Include/Loader/: PNG.hpp
Include/PNGLoader/: PngLoader.hpp
Source/: PngLoader.cpp  main.cpp
Source/Amoxe/: Amoxe.cpp  Image.cpp  Layer.cpp  Readable.cpp  Writable.cpp
Source/Amoxe/Private/: Compressable.hpp  Decompressable.hpp  Readable.hpp  Writeable.hpp
Source/Amoxe/Private/Exception/: CompressableWriteException.hpp  DecompressableWriteException.hpp  FileNotExistException.hpp
Source/Gall/: Gall.cpp  main.cpp
Source/Loader/: PNG.cpp  PngLoader.cpp
Test/: TestImagesSha.cpp
Test/Images/: BackArm.md  Body.md  FrontArm.md  Fruits.md  GreatImage.md  Head.md  Meats.md  Vegetables.md
src/: REXSpeeder.cpp  REXSpeeder.h  main.cpp
