CMAKE_MINIMUM_REQUIRED(VERSION 3.15 FATAL_ERROR)
PROJECT(png2rex VERSION 2020.5.3 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED on)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O3 -Wall -Wpedantic -march=native -mtune=native -g")

ADD_EXECUTABLE(png2rex src/main.cpp src/PngLoader.cpp src/REXSpeeder.cpp)

# We depend upon zlib
FIND_PACKAGE(ZLIB REQUIRED)
IF (ZLIB_FOUND)
    INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(png2rex ${ZLIB_LIBRARIES})
ENDIF ()

# We also depend upon libpng
FIND_PACKAGE(PNG REQUIRED)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(png2rex ${PNG_LIBRARIES})

